fix: actually center blockie on mobile

--- a/webapp/src/components/SettingsPage/SettingsPage.css
+++ b/webapp/src/components/SettingsPage/SettingsPage.css
@@ -45,4 +45,8 @@
   .blockie {
     margin: 0 auto 50px;
   }
+
+  .SettingsPage .AddressBlock {
+    margin-right: 0px;
+  }
 }
